# zipsign

./: .gitignore  Cargo.toml  LICENSE.apache2  LICENSE.mit  README.md  rustfmt.toml
.github/: dependabot.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yml  devskim-analysis.yml
api/: Cargo.toml  LICENSE.apache2  LICENSE.mit  README.md
api/src/: constants.rs  keys.rs  lib.rs  sign_unsign_zip.rs  verify.rs  verify_unsign_tar.rs
api/src/sign/: mod.rs  tar.rs  zip.rs
api/src/unsign/: mod.rs  tar.rs  zip.rs
api/src/verify/: mod.rs  tar.rs  zip.rs
cli/: Cargo.toml
cli/src/: generate.rs  main.rs  sign.rs  verify.rs
src/: generate.rs  main.rs  sign.rs  tar.rs  unsign.rs  verify.rs  zip.rs
