[package]
name = "zipsign"
description = "Sign and verify `.zip` and `.tar.gz` files with an ed25519 signing key"
version = "0.1.0-a.3"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/zipsign"
license = "Apache-2.0 WITH LLVM-exception"

[workspace]
resolver = "2"
members = [".", "api"]
default-members = [".", "api"]

[workspace.dependencies]
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["digest"] }
normalize-path = "0.2"
pretty-error-debug = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
thiserror = "1"
zip = { version = "0.6", default-features = false }

[workspace.dependencies.zipsign-api]
version = "0.1.0-a.3"
path = "api"
default-features = false
features = ["tar", "zip"]

[dependencies]
clap.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
normalize-path.workspace = true
pretty-error-debug.workspace = true
rand_core.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zipsign-api.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
