[package]
name = "zipsign"
description = "Sign and verify `.zip` and `.tar.gz` files with an ed25519 signing key"
version = "0.1.3"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/zipsign"
license = "MIT OR Apache-2.0 OR Apache-2.0 WITH LLVM-exception"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
clap.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
normalize-path.workspace = true
pretty-error-debug.workspace = true
rand_core.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zipsign-api.workspace = true

[workspace]
resolver = "2"
members = [".", "api"]
default-members = [".", "api"]

[workspace.dependencies]
base64 = "0.22.0"
clap = { version = "4.4.0", features = ["derive"] }
ed25519-dalek = { version = "2.0.0", features = ["digest"] }
normalize-path = "0.2.0"
pretty-error-debug = "0.3.0"
tempfile = "3.0.0"
thiserror = "2.0.8"
zip = { version = "2.0.0", default-features = false }

# Cannot be newer than `ed25519-dalek`'s dependency
rand_core = { version = "0.6.0", features = ["getrandom"] }

[workspace.dependencies.zipsign-api]
version = "0.1.3"
path = "api"
default-features = false
features = ["tar", "zip"]
