[workspace]
resolver = "2"
members = ["api", "cli"]
default-members = ["api", "cli"]

[workspace.dependencies]
base64 = "0.22.0"
clap = { version = "4.4.0", features = ["derive"] }
ed25519-dalek = { version = "2.0.0", features = ["digest"] }
getrandom = { version = "0.3.3", features = ["std"] }
normalize-path = "0.2.0"
pretty-error-debug = "0.3.0"
tempfile = "3.0.0"
thiserror = "2.0.8"
zip = { version = ">= 2.0.0, < 5.0.0", default-features = false }

[workspace.dependencies.zipsign-api]
version = "0.1.5"
path = "api"
default-features = false
features = ["tar", "zip"]

[workspace.lints.rust]
unknown_lints = { level = "allow", priority = -1 }
unsafe_code = { level = "forbid", priority = -1 }

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
rust_2024_compatibility = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_results = "warn"
warnings = "warn"

[workspace.lints.clippy]
collapsible_match = "warn"
expect_used = "warn"
match_bool = "warn"
match_ref_pats = "warn"
match_same_arms = "warn"
match_single_binding = "warn"
needless_bool = "deny"
needless_late_init = "warn"
needless_match = "warn"
redundant_guards = "warn"
redundant_pattern = "warn"
redundant_pattern_matching = "warn"
single_match = "warn"
single_match_else = "warn"
unwrap_used = "warn"
