[package]
name = "zipsign-api"
description = "Sign and verify `.zip` and `.tar.gz` files with an ed25519 signing key"
version = "0.1.0-a.2"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/zipsign"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
base64 = { workspace = true, optional = true }
ed25519-dalek.workspace = true
thiserror.workspace = true
zip = { workspace = true, optional = true }

[features]
default = ["tar", "zip"]

verify = []
verify-tar = ["verify", "dep:base64"]
verify-zip = ["verify"]

sign = []
sign-tar = ["sign", "dep:base64"]
sign-zip = ["sign", "dep:zip"]

tar = ["sign-tar", "verify-tar"]
zip = ["sign-zip", "verify-zip"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
