[package]
name = "zipsign"
description = "Sign and verify `.zip` and `.tar.gz` files with an ed25519 signing key"
version = "0.1.4"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/zipsign"
license = "MIT OR Apache-2.0 OR Apache-2.0 WITH LLVM-exception"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
clap.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
normalize-path.workspace = true
pretty-error-debug.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zipsign-api.workspace = true
